--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "PORT=9001 craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -40,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8"
   }
 }
